--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,34 @@
 .App {
   text-align: center;
+  height: 100%;
+  padding: 50px 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.counter {
+  margin: 100px auto;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.actionBtn {
+  padding: 1.1em;
+  border-radius: 100%;
+  cursor: pointer;
+  border: none;
+  text-shadow: -4px -4px 18px rgba(0, 0, 0, 0.28);
+  box-shadow: inset -3px -3px 20px rgba(0, 0, 0, 0.33);
+  margin: 0 10px;
+  background-color: salmon;
   color: white;
-}
-
-.App-title {
   font-size: 1.5em;
+  transition: 100ms ease-out;
 }
-
-.App-intro {
-  font-size: large;
+.actionBtn:hover {
+  color: #eee;
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.actionBtn:active {
+  color: #ddd;
+  text-shadow: inset 4px 4px 18px rgba(0, 0, 0, 0.28);
+  box-shadow: inset 3px 3px 20px rgba(0, 0, 0, 0.33);
+}
+.actionBtn:focus {
+  outline: 0;
 }
