--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,18 @@
 .App {
   text-align: center;
   height: 100%;
+  margin: 40px auto;
   padding: 50px 0;
 }
 
 .counter {
-  margin: 100px auto 20px auto;
+  margin: 40px auto 40px auto;
   font-size: 4em;
 }
 
 .workPlayIcon {
   font-size: 2em;
-  margin-bottom: 80px;
+  margin: 0px;
 }
 
 .actionBtn {
