--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,12 @@
   text-align: center;
   height: 100%;
   margin: 40px auto;
-  padding: 50px 0;
+  padding: 10px 0;
+}
+
+.circleProgress {
+  height: 200px;
+  width: 200px;
 }
 
 .counter {
