--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,19 @@
   height: 100%;
   margin: 40px auto;
   padding: 10px 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.timerContainer {
+  height: 100%;
 }
 
 .circleProgress {
-  height: 200px;
-  width: 200px;
+  height: 400px;
+  width: 400px;
+  margin: 40px auto;
+  z-index: 1;
 }
 
 .counter {
