--- a/src/App.css
+++ b/src/App.css
@@ -37,12 +37,12 @@
   border-radius: 100%;
   cursor: pointer;
   border: none;
-  box-shadow: inset -3px -3px 20px rgba(0, 0, 0, 0.33);
+  box-shadow: -2px -3.5px 12px rgba(0, 0, 0, 0.1), inset -1px -7px 2px rgba(0, 0, 0, 0.33);;
   margin: 0 10px;
   background-color: salmon;
   color: white;
   font-size: 1.5em;
-  transition: 100ms ease-out;
+  transition: 150ms ease-out;
   -webkit-tap-highlight-color: transparent;
 }
 .actionBtn:hover {
@@ -50,7 +50,7 @@
 }
 .actionBtn:active {
   color: #ddd;
-  box-shadow: inset 3px 3px 20px rgba(0, 0, 0, 0.33);
+  box-shadow: inset 0px 0px 0px rgba(0, 0, 0, 0.23);
 }
 .actionBtn:focus {
   outline: 0;
