--- a/src/App.css
+++ b/src/App.css
@@ -26,11 +26,13 @@
   left: 50%;
   transform: translate(-50%, -135%);
   font-size: 4em;
+  color: #d67e73;
 }
 
 .workPlayIcon {
   font-size: 2em;
   margin: 0px;
+  color: #2d2d2d;
 }
 
 .actionBtn {
@@ -38,16 +40,16 @@
   border-radius: 100%;
   cursor: pointer;
   border: none;
-  box-shadow: -2px -3.5px 12px rgba(0, 0, 0, 0.1), inset -1px -7px 2px rgba(0, 0, 0, 0.2);;
+  box-shadow: -2px -3px 12px rgba(0, 0, 0, 0.05), inset -1px -7px 2px rgba(0, 0, 0, 0.06);;
   margin: 0 10px;
-  background-color: salmon;
+  background-color: #d67e73;
   color: white;
   font-size: 1.5em;
   transition: 150ms ease-out;
   -webkit-tap-highlight-color: transparent;
 }
 .actionBtn:hover {
-  color: #eee;
+  color: #f2f2f2;
 }
 .actionBtn:active {
   color: #ddd;
