--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,8 @@
 
 .workPlayIcon {
   font-size: 2em;
-  margin: 30px 0 65px 0;
+  margin: 0;
+  margin-bottom: 25px;
   color: #d67e73;
 }
 
@@ -37,12 +38,13 @@
   font-size: 4.5em;
   color: #d67e73;
   margin: 0;
+  font-weight: 300;
 }
 
 
 .actionBtn {
-  padding: 1.1em;
-  border-radius: 100%;
+  padding: 1.3em;
+  border-radius: 100px;
   cursor: pointer;
   border: none;
   box-shadow: -2px -3px 12px rgba(0, 0, 0, 0.05), inset -1px -7px 2px rgba(0, 0, 0, 0.06);
@@ -70,16 +72,16 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -110%);
+    transform: translate(-50%, -108%);
   }
 
   .workPlayIcon {
-    margin-bottom: 25px;
-    font-size: 1.3em;
+    margin-bottom: 15px;
+    font-size: 1em;
   }
 
   .counter {
-    font-size: 2.2em;
+    font-size: 2.6em;
   }
 
   .actionBtn {
